# go-workspaces-bzlmods

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  go.work  go.work.sum
a/: BUILD.bazel  go.mod  go.sum  lib.go
b/: BUILD.bazel  MODULE.bazel  go.mod  go.sum  lib.go
c/: BUILD.bazel  MODULE.bazel  go.mod  go.sum  lib.go
consumer/: BUILD.bazel  MODULE.bazel  go.mod  go.sum  main.go
