load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@gazelle//language/go:go_default_library",
    ],

    # Public for use in sub-MODULEs
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
    extra_args = ["-index=lazy"],
    gazelle = ":gazelle_bin",
)
