load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library")

# gazelle:resolve go github.com/jbedard/go-workspaces-bzlmod/a @go_workspaces_bzlmod//a
# gazelle:resolve go github.com/jbedard/go-workspaces-bzlmod/b @go_workspaces_bzlmod_b//:b

go_library(
    name = "c",
    srcs = ["lib.go"],
    importpath = "github.com/jbedard/go-workspaces-bzlmod/c",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_emirpasic_gods//utils",
        "@go_workspaces_bzlmod//a",
        "@go_workspaces_bzlmod_b//:b",
    ],
)

gazelle(
    name = "gazelle",
    extra_args = ["-index=lazy"],
    gazelle = "@go_workspaces_bzlmod//:gazelle_bin",
)
