module(name = "go_workspaces_bzlmod_c")

bazel_dep(
    name = "rules_go",
    version = "0.57.0",
)
bazel_dep(
    name = "gazelle",
    version = "0.45.0",
)
bazel_dep(name = "go_workspaces_bzlmod")
local_path_override(
    module_name = "go_workspaces_bzlmod",
    path = "..",
)

bazel_dep(name = "go_workspaces_bzlmod_b")
local_path_override(
    module_name = "go_workspaces_bzlmod_b",
    path = "../b",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_emirpasic_gods", "com_github_jbedard_go_workspaces_bzlmod_a", "com_github_jbedard_go_workspaces_bzlmod_b")

####### Dev dependencies ########

# Go SDK version which can only be defined in a root MODULE
go_sdk2 = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk2.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
